5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4011/executions/1635_2447.log
== TEST (2019-04-14 20:53:12) 
-- CODE:
preco = float(input("Qual o preco? "))
pagamento = float(input("Qual o pagamento?"))

x = preco - pagamento
y = pagamento - preco

if ( preco > pagamento ):
	print("Falta", X)
else
	print("Troco de", Y)

-- ERROR:
File "XXXX", line 9
    else
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 20:53:22) 
-- CODE:
preco = float(input("Qual o preco? "))
pagamento = float(input("Qual o pagamento?"))

x = preco - pagamento
y = pagamento - preco

if ( preco > pagamento ):
	print("Falta", X)
else:
	print("Troco de", Y)

-- EXECUTION TIME:
0.232468
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2447/main.py", line 8, in <module>
    print("Falta", X)
NameError: name 'X' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 20:53:22) 
-- CODE:
preco = float(input("Qual o preco? "))
pagamento = float(input("Qual o pagamento?"))

x = preco - pagamento
y = pagamento - preco

if ( preco > pagamento ):
	print("Falta", X)
else:
	print("Troco de", Y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print("Falta", X)
NameError: name 'X' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 20:53:55) 
-- CODE:
preco = float(input("Qual o preco? "))
pagamento = float(input("Qual o pagamento?"))

x = preco - pagamento
y = pagamento - preco

if ( preco > pagamento ):
	print("Falta", x)
else:
	print("Troco de", y)

-- OUTPUT:
Falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 20:54:21) 
-- CODE:
preco = float(input("Qual o preco? "))
pagamento = float(input("Qual o pagamento?"))

x = preco - pagamento
y = pagamento - preco

if ( preco > pagamento ):
	print("Falta", x)
else:
	print("Troco de", y)

-- EXECUTION TIME:
0.163354
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de 0.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
